[package]
name = "android_example"
version = "0.1.0"
authors = ["Nicolas Ferré <nicolas.ferre.public@gmail.com>"]
edition = "2021"
description = "Examples using the Modor game engine with Android"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
modor = { version = "0.1.0", path = "../../crates/modor" }
modor_physics = { version = "0.1.0", path = "../../crates/modor_physics" }
modor_graphics = { version = "0.1.0", path = "../../crates/modor_graphics" }
instant = "0.1"
rand = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue= "0.5"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_name = "modor_rendering_2d_example"
build_targets = [ "armv7-linux-androideabi" ]

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.sdk]
target_sdk_version = 31
