[package]
name = "game_of_life"
version = "0.1.0"
description = "Game of life example of the Modor game engine"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
modor = { workspace = true }
modor_graphics = { workspace = true }
modor_input = { workspace = true }
modor_math = { workspace = true }
modor_physics = { workspace = true }
instant = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_name = "modor_game_example"
build_targets = ["armv7-linux-androideabi"]

[package.metadata.android.application]
label = "Game of life - Modor example"

[package.metadata.android.sdk]
target_sdk_version = 31
