[package]
name = "textures"
version = "0.1.0"
description = "Texture example of the Modor game engine"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
modor = { workspace = true }
modor_graphics = { workspace = true }
modor_math = { workspace = true }
modor_physics = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_name = "modor_textures_example"
build_targets = ["armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.application]
label = "Textures - Modor example"

[package.metadata.android.sdk]
target_sdk_version = 31
